--- a/.env
+++ b/.env
@@ -2,3 +2,10 @@ NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=uhfUHDOwesuisUFHO*UGFusegd
 GOOGLE_CLIENT_ID=995348018802-clco05u1o4kicgcprndut25atlg7s5ed.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+MONGODB_URI=mongodb+srv://manishbhandari0444:0SoKLs8J2317zQJl@cluster0.oeusm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+GOOGLE_AI_API_KEY=AIzaSyCDwnm7xQFycc6SwGvreA48_d0xH3DOkSM
+EMAIL_SERVER_HOST=smtp.gmail.com
+EMAIL_SERVER_PORT=465
+EMAIL_SERVER_USER=manishbhandari0444@gmail.com
+EMAIL_SERVER_PASSWORD=sodk qbfo kcpl rpeu
+EMAIL_FROM=manishbhandari0444@gmail.com
