--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,28 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": ["next/core-web-vitals", "next/typescript"],
+  "rules": {
+    // Disable unused vars warnings
+    "@typescript-eslint/no-unused-vars": "off",
+    
+    // Disable explicit 'any' type warnings
+    "@typescript-eslint/no-explicit-any": "off",
+    
+    // Disable unused components/imports warnings
+    "react/no-unused-prop-types": "off",
+    
+    // Disable unescaped entities warnings
+    "react/no-unescaped-entities": "off",
+    
+    // Disable empty interface warnings
+    "@typescript-eslint/no-empty-object-type": "off",
+    
+    // Disable conditional React Hook usage warnings
+    "react-hooks/rules-of-hooks": "off",
+    
+    // Disable missing dependency warnings
+    "react-hooks/exhaustive-deps": "off",
+    "no-var": "off",
+    // Additional rules you might want to disable based on the warnings
+    "prefer-const": "off"
+  }
 }
