--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "lib": ["dom", "dom.iterable", "esnext"],
+    "types": ["node", "next", "framer-motion"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
