--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,5 @@
 {
-  "buildCommand": "npm run build",
-  "installCommand": "npm install",
   "framework": "nextjs",
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/next"
-    }
-  ]
+  "buildCommand": "npx prisma generate && next build",
+  "installCommand": "npm install"
 }
